--- a/src/app/features/app/components/game-screen/game-level/game-level.component.scss
+++ b/src/app/features/app/components/game-screen/game-level/game-level.component.scss
@@ -366,6 +366,8 @@
 */
 .fireworks-celebration {
     position: absolute;
+    width: 100%;
+    height: 100%;
     inset: 0;
     pointer-events: none;
     z-index: 999;
